{
    "name": "Player1Input",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "fbbd1305-c1d9-475d-8764-cb862d937505",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "20d16e86-ab89-4878-ba93-9efd13a44fd3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "fcfa9e72-2151-4429-985d-78dce8b1ce2e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Ability",
                    "type": "Button",
                    "id": "29f35f3d-5695-4d52-93d4-e29e0f123b9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "df282258-4739-430a-8a3c-9510b0c3c22c",
                    "path": "<Keyboard>/q",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a639720-05fd-4a71-86dd-3de38452d101",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "93be2eb7-fa5c-4a08-b3bd-9f4128acd2c1",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "98c97114-0215-4616-8ff1-5479d3e6619c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "5518f427-5e17-4446-96aa-08aa675c66fc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "9950b742-6e3b-4da4-8989-6bec08d5dcc4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "ddf8562b-10c8-4baa-a725-72d02643c240",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Ability",
            "id": "2f2d6c08-2a5e-48d6-be85-e45ed975605d",
            "actions": [
                {
                    "name": "Ability",
                    "type": "Button",
                    "id": "bc174b82-6431-4431-bde1-a0d40387bb34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseAbility",
                    "type": "Button",
                    "id": "fd2fc1ce-837e-4dd8-ab58-c1f7008cc46d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CycleAbility",
                    "type": "Value",
                    "id": "4509035c-6431-4c58-84da-00203da17613",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3079d1b6-f004-4565-915a-de973333a51d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15fc38c7-61da-49c5-a2b1-8528977c2e98",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "e0a04ad9-2a64-4748-9e9c-357dd98ca4d3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleAbility",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d88ab66b-da44-4eb6-a7d6-024deaa19c87",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleAbility",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a9eb1f95-4d89-4d02-ac85-44f858ae7fb3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleAbility",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Death",
            "id": "9cc37134-11ea-49a6-889f-cb4007bb85e9",
            "actions": [
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "8631c1fc-58a4-4509-befd-db4689dc622c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "094eeef1-ae45-475b-aa7e-8610de1bd77d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}